[gd_scene load_steps=8 format=2]

[ext_resource path="res://Src/Objects/LaserDetector.gd" type="Script" id=1]
[ext_resource path="res://Assets/Laser/LaserDetectorNode.png" type="Texture" id=2]
[ext_resource path="res://Assets/SFX/laser_detect.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/sfx_laser.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 28 )

[sub_resource type="Animation" id=2]
resource_name = "detect"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BeamNode/Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BeamNode/Bottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BeamNode/Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BeamNode/Bottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="LaserDetector" type="Node2D"]
script = ExtResource( 1 )

[node name="BeamNode" type="Node2D" parent="."]

[node name="LaserBeam" type="Node2D" parent="BeamNode"]

[node name="Top" type="Sprite" parent="BeamNode"]
z_index = 52
texture = ExtResource( 2 )
centered = false
hframes = 3

[node name="Bottom" type="Sprite" parent="BeamNode"]
position = Vector2( 0, 56 )
scale = Vector2( 1, -1 )
z_index = 52
texture = ExtResource( 2 )
centered = false
hframes = 3

[node name="Area2D" type="Area2D" parent="BeamNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeamNode/Area2D"]
position = Vector2( 4, 28 )
shape = SubResource( 1 )

[node name="MotionTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/detect = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="OffTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DetectionDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="LaserDetect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
attenuation = 2.0
bus = "Sound"

[node name="LaserNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -32.0
autoplay = true
max_distance = 512.0
attenuation = 2.63902
bus = "Sound"

[connection signal="body_entered" from="BeamNode/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="BeamNode/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="tween_completed" from="MotionTween" to="." method="_on_MotionTween_tween_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="OffTimer" to="." method="_on_OffTimer_timeout"]
[connection signal="timeout" from="DetectionDelay" to="." method="_on_DetectionDelay_timeout"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_FlickerTimer_timeout"]
[connection signal="finished" from="LaserNoise" to="." method="_on_LaserNoise_finished"]
